@@ -1,5 +1,7 @@
 2009-08-27  Ulrich Mueller  <ulm@gentoo.org>
 
+	* Makefile (DISTFILES): Include Texinfo source in tarball.
+
 	* gentoo-syntax.el (ebuild-mode-eclasses): New variable.
 	(ebuild-mode-insert-skeleton): Ask for inherited eclasses.
 
